[fix] textarea overflow, changed buttons color

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -10,8 +10,8 @@
   --btn-w: 6rem;
   --btn-font-size:3rem;
   --input-font-size:5rem;
-  --f7-theme-color: #09b1a3;
-  --f7-theme-color-rgb: 9, 177, 163;
+  --f7-theme-color: #09b1a3!important;
+  --f7-theme-color-rgb: 9, 177, 163 !important;
 }
 body {
   font-size: 16px;
@@ -64,7 +64,6 @@ body {
   padding-top: 0;
 }
 .grid-box {
-  // box-shadow: 0px 4px 10px #0003;
   background: #fff;
 border-radius: 1rem;
   &.equal-btn-box {
@@ -123,11 +122,11 @@ border-radius: 1rem;
    align-items: center;
    justify-content: center;
    border-radius: 0.75rem;
-  // box-shadow: 0 3px 8px #0003;
+  
 }
 }
 .input-container {
-  // align-items: flex-end;
+
   display: flex;
 
   flex-direction: column;
@@ -137,7 +136,7 @@ border-radius: 1rem;
     display: inline-block;
   width: 100%;
   font-family: inherit;
-  // white-space: nowrap;
+  white-space: nowrap;
   resize: none;
   height: max-content;
   max-height: 75px;
